--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hackronym
-spring.datasource.username=hackronym
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/hackronym
+spring.datasource.username=${MYSQL_USERNAME:hackronym}
+spring.datasource.password=${MYSQL_PASSWORD:password}
 logging.level.com.slack.api=DEBUG
 server.port=3000
