--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/hackronym
-spring.datasource.username=${MYSQL_USERNAME:hackronym}
-spring.datasource.password=${MYSQL_PASSWORD:password}
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/hackronym
+spring.datasource.username=${RDS_USERNAME:hackronym}
+spring.datasource.password=${RDS_PASSWORD:password}
 logging.level.com.slack.api=DEBUG
-server.port=3000
+server.port=5000
