--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.slack.api:bolt-servlet:1.10.0'
     implementation 'com.slack.api:bolt-jetty:1.10.0'
 	implementation 'com.google.guava:guava:31.1-jre'
+	implementation 'com.opencsv:opencsv:5.5'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
