--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,13 @@
 plugins {
 	id 'org.springframework.boot' version '2.7.2'
 	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
+	id "io.freefair.lombok" version "6.6.1"
 	id 'java'
 }
 
 group = 'com.xdesign'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
 
 repositories {
 	mavenCentral()
@@ -27,10 +22,8 @@ dependencies {
     implementation 'com.slack.api:bolt-jetty:1.10.0'
 	implementation 'com.google.guava:guava:31.1-jre'
 
-	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 
-	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
